@@ -6,6 +6,7 @@ import com.blueconic.browscap.UserAgentParser;
 import com.blueconic.browscap.UserAgentService;
 import io.tech1.framework.domain.http.requests.UserAgentDetails;
 import io.tech1.framework.domain.http.requests.UserAgentHeader;
+import io.tech1.framework.domain.utilities.printer.PRINTER;
 import io.tech1.framework.properties.ApplicationFrameworkProperties;
 import io.tech1.framework.utilities.browsers.UserAgentDetailsUtility;
 import lombok.extern.slf4j.Slf4j;
@@ -38,9 +39,10 @@ public class UserAgentDetailsUtilityImpl implements UserAgentDetailsUtility {
         UserAgentParser userAgentParserOrNull;
         boolean configuredFlag;
         String exceptionMessageOrNull;
-        LOGGER.info(LINE_SEPARATOR_INTERPUNCT);
+        PRINTER.info(LINE_SEPARATOR_INTERPUNCT);
         if (this.applicationFrameworkProperties.getUtilitiesConfigs().getUserAgentConfigs().isEnabled()) {
             try {
+                PRINTER.info("{} User agent is enabled", FRAMEWORK_UTILITIES_PREFIX);
                 userAgentParserOrNull = new UserAgentService().loadParser(
                         List.of(
                                 BrowsCapField.BROWSER,
@@ -50,22 +52,18 @@ public class UserAgentDetailsUtilityImpl implements UserAgentDetailsUtility {
                 );
                 configuredFlag = true;
                 exceptionMessageOrNull = null;
-                LOGGER.info("{} User agent configuration status: {}", FRAMEWORK_UTILITIES_PREFIX, SUCCESS);
+                PRINTER.info("{} User agent configuration status: {}", FRAMEWORK_UTILITIES_PREFIX, SUCCESS);
             } catch (ParseException | IOException ex) {
-                var message = String.format("%s user agent configuration status: %s", FRAMEWORK_UTILITIES_PREFIX, FAILURE);
-                LOGGER.error(message);
-                LOGGER.error("Please check user agent utility configuration");
-                userAgentParserOrNull = null;
-                configuredFlag = false;
-                exceptionMessageOrNull = ex.getMessage();
+                PRINTER.error("%s User agent configuration status: %s".formatted(FRAMEWORK_UTILITIES_PREFIX, FAILURE));
+                throw new IllegalArgumentException();
             }
         } else {
-            LOGGER.warn("{} User agent is disabled", FRAMEWORK_UTILITIES_PREFIX);
+            PRINTER.info("{} User agent is disabled", FRAMEWORK_UTILITIES_PREFIX);
             userAgentParserOrNull = null;
             configuredFlag = false;
-            exceptionMessageOrNull = contactDevelopmentTeam("User agent configurations failure");
+            exceptionMessageOrNull = contactDevelopmentTeam("User agent configuration failure");
         }
-        LOGGER.info(LINE_SEPARATOR_INTERPUNCT);
+        PRINTER.info(LINE_SEPARATOR_INTERPUNCT);
         this.userAgentParser = userAgentParserOrNull;
         this.configured = configuredFlag;
         this.exceptionMessage = exceptionMessageOrNull;
